--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "generators/app/template"]
-	path = generators/app/template
+[submodule "generators/app/templates"]
+	path = generators/app/templates
 	url = https://github.com/Ukesh-dev/gulp-sass-generator.git
